force-app/main/default/objects/Invoice_Repayment__c/Invoice_Repayment__c.object-meta.xml
<CustomObject>
    <label>Invoice Repayment</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Invoice Repayment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Repayments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>