force-app/main/default/objects/Invoice_Repayment__c/fields/Capped_Funder_Discount__c.field-meta.xml
<CustomField>
    <fullName>Capped_Funder_Discount__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Capped Funder Discount</label>
    <type>Checkbox</type>
</CustomField>