force-app/main/default/objects/Invoice_Repayment__c/fields/Funder_Amount__c.field-meta.xml
<CustomField>
    <fullName>Funder_Amount__c</fullName>
    <label>Funder Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>