force-app/main/default/objects/Invoice_Repayment__c/fields/Funder_Amount_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Funder_Amount_Ratio__c</fullName>
    <label>Funder Amount Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>