force-app/main/default/objects/Invoice_Repayment__c/fields/Funder_Net_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Funder_Net_Discount_Amount__c</fullName>
    <label>Funder Net Discount Amount</label>
    <summarizedField>Allocation_Repayment__c.Net_Discount_Amount__c</summarizedField>
    <summaryForeignKey>Allocation_Repayment__c.Invoice_Repayment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>