force-app/main/default/objects/Invoice_Repayment__c/fields/Invoice_Finance_Deal__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Finance_Deal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice Finance Deal</label>
    <referenceTo>invoice_finance_deal__c</referenceTo>
    <relationshipLabel>Invoice Repayments</relationshipLabel>
    <relationshipName>Invoice_Repayments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>