force-app/main/default/objects/Invoice_Repayment__c/fields/Remaining_Invoice_Face_Value_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Invoice_Face_Value_Amount__c</fullName>
    <label>Remaining Invoice Face Value Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>