force-app/main/default/objects/Invoice_Repayment__c/fields/Repaid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Repaid_Amount__c</fullName>
    <label>Repaid Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>