force-app/main/default/objects/Invoice_Repayment__c/fields/Repaid_Invoice_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Repaid_Invoice_Ratio__c</fullName>
    <label>Repaid Invoice Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>