force-app/main/default/objects/Invoice_Repayment__c/fields/Repayment_Installment__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Installment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The installment which the repayment is linked.</description>
    <label>Repayment Installment</label>
    <referenceTo>Repayment_Installment__c</referenceTo>
    <relationshipLabel>Invoice Repayments</relationshipLabel>
    <relationshipName>Invoice_Repayments</relationshipName>
    <type>Lookup</type>
</CustomField>