force-app/main/default/objects/Invoice_Repayment__c/fields/Repayment_Type__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Type__c</fullName>
    <defaultValue>&quot;Repayment of Funders Capital and Discount Amount&quot;</defaultValue>
    <label>Repayment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repayment of Funders Capital only</fullName>
            </value>
            <value>
                <fullName>Repayment of Funders Capital and Discount Amount</fullName>
            </value>
            <value>
                <fullName>Repayment to all parties</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>