force-app/main/default/objects/Invoice_Repayment__c/fields/Supplier_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Discount_Amount__c</fullName>
    <label>Supplier Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>